pkginclude_HEADERS = OISConfig.h \
                     OISEffect.h \
                     OISEvents.h \
                     OISException.h \
                     OISForceFeedback.h \
                     OISInputManager.h \
                     OISInterface.h \
                     OISJoyStick.h \
                     OISKeyboard.h \
                     OISMouse.h \
                     OISObject.h \
                     OISPrereqs.h \
                     OISFactoryCreator.h \
                     OISMultiTouch.h \
                     OIS.h
